--- a/css/fd.css
+++ b/css/fd.css
@@ -91,8 +91,7 @@ body {
 .box .item:nth-child(even) {
 }
 .item {
-  width: calc(92rem / 16);
-  margin: 0.75rem 0;
+  margin: 0.75rem 1rem;
 }
 .item > div:nth-child(1) {
   width: calc(92rem / 16);
@@ -110,26 +109,25 @@ body {
 }
 
 .util {
-    width: calc(168rem / 16);
-    height: calc(50rem / 16);
-    background: rgba(255, 255, 255, 1);
-    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.16);
-    border-radius: 25px;
-    display: flex;
-    line-height: calc(60rem / 16);
-    justify-content: space-around;
-  }
-  .util img {
-    width: calc(19rem / 16);
-    height: calc(19rem / 16);
-  }
-  .foot {
-    display: flex;
-    justify-content: center;
-    margin-top: calc(40rem / 16);
-    position: fixed;
-    bottom: calc(35rem / 16);
-    left: 0;
-    right: 0;
-  }
-  
+  width: calc(168rem / 16);
+  height: calc(50rem / 16);
+  background: rgba(255, 255, 255, 1);
+  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.16);
+  border-radius: 25px;
+  display: flex;
+  line-height: calc(60rem / 16);
+  justify-content: space-around;
+}
+.util img {
+  width: calc(19rem / 16);
+  height: calc(19rem / 16);
+}
+.foot {
+  display: flex;
+  justify-content: center;
+  margin-top: calc(40rem / 16);
+  position: fixed;
+  bottom: calc(35rem / 16);
+  left: 0;
+  right: 0;
+}
