--- a/css/userInfo.css
+++ b/css/userInfo.css
@@ -55,6 +55,7 @@
   justify-content: space-around;
   margin-top: calc(15rem / 16);
 }
+
 .item {
 }
 .item > div:nth-child(1) {
@@ -106,8 +107,15 @@
   font-family: PingFang SC Bold;
   font-weight: 400;
   color: rgba(255, 255, 255, 1);
+  display: flex;
+  font-size: calc(16rem / 16);
+  font-family: PingFang SC Bold;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 1);
 }
-
+.sz > div {
+  margin-right: 0.35rem;
+}
 .item1 > div:nth-child(2) {
   font-size: calc(16rem / 16);
   font-family: PingFang SC Regular;
@@ -163,4 +171,54 @@ span {
   justify-content: space-around;
   align-items: center;
   margin: 1rem 0;
+}
+
+.panel {
+  position: absolute;
+  width: 100%;
+  top: calc(99rem / 16);
+  right: 0;
+  width: 100%;
+  left: 0;
+  font-size: calc(16rem / 16);
+  font-family: PingFang SC Regular;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 1);
+}
+.panel > div {
+  display: flex;
+  justify-content: center;
+}
+.mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 1067px;
+  background: rgba(10, 10, 10, 1);
+  opacity: 0.8;
+}
+
+.util {
+  width: calc(168rem / 16);
+  height: calc(50rem / 16);
+  background: rgba(255, 255, 255, 1);
+  box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.16);
+  border-radius: 25px;
+  display: flex;
+  line-height: calc(60rem / 16);
+  justify-content: space-around;
+}
+.util img {
+  width: calc(19rem / 16);
+  height: calc(19rem / 16);
+}
+.foot {
+  display: flex;
+  justify-content: center;
+  margin-top: calc(40rem / 16);
+  position: fixed;
+  bottom: calc(35rem / 16);
+  left: 0;
+  right: 0;
 }
