--- a/css/view-records.css
+++ b/css/view-records.css
@@ -74,6 +74,8 @@ body {
   font-size: calc(12rem / 16);
   font-family: PingFang SC Regular;
   font-weight: 400;
+  position: relative;
+
   color: rgba(102, 102, 102, 1);
 }
 .util1 > div:nth-child(2) img {
@@ -108,4 +110,16 @@ body {
   bottom: calc(35rem / 16);
   left: 0;
   right: 0;
+}
+
+.jy {
+  position: absolute;
+  right: calc(12rem / 16);
+  top: 0;
+
+}
+.jy img {
+  width: calc(52rem / 16);
+  height: calc(52rem / 16);
+  border-radius: 50%;
 }
