--- a/css/share.css
+++ b/css/share.css
@@ -13,8 +13,6 @@ input {
   border: none;
 }
 .share > div {
-  display: flex;
-  justify-content: center;
   width: 100%;
 }
 p {
@@ -46,4 +44,33 @@ body {
   font-size: calc(16rem / 16);
   font-family: PingFang SC Regular;
   font-weight: 400;
+}
+.images {
+  flex-wrap: wrap;
+  display: flex;
+  width: 100%;
+}
+.item {
+  margin-right: calc(15rem / 16);
+
+  width: calc(99rem / 16);
+  height: calc(99rem / 16);
+  background: rgba(103, 80, 80, 1);
+  border-radius: 2px;
+  position: relative;
+
+  margin-top: calc(29.5rem / 16);
+}
+.close {
+  width: calc(22rem / 16);
+  height: calc(22rem / 16);
+  background: rgba(0, 0, 0, 1);
+  opacity: 0.5;
+  border-radius: 50%;
+  position: absolute;
+  right: -0.5rem;
+  top: -0.5rem;
+}
+.ot{
+  background:rgba(187,187,187,1) !important;
 }
